:fix: fixing overflow & background bugs in about page

--- a/site/public/css/sobreStyle.css
+++ b/site/public/css/sobreStyle.css
@@ -8,6 +8,8 @@
 
 body {
     font-family: 'Manrope', sans-serif;
+    background: black;
+    overflow-x: hidden;
 }
 
 .header {
@@ -171,7 +173,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 25%;
+    /* height: 25%; */
     width: 60%;
     background: rgb(164, 164, 164)
 }
@@ -180,15 +182,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 100%;
     height: 100%;
 }
 
 .container_links .titulo_redes {
+    text-align: center;
     font-size: 30px;
     font-weight: 400;
     margin-top: 20px;
+    padding: 20px;
 }
 
 .container_links .lista_redes {
